<resources>
    <string name="app_name">MVP clean code</string>
    <string name="app_login">App Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="text_register">Didn\'t have an account? register now</string>
    <string name="register_page">Register Page</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="text_forgot_pw">Forgot Password ? Reset here...</string>
    <string name="reset_pw">Reset password</string>
    <string name="enter_your_email_for_confirmation">Enter your email for confirmation</string>
    <string name="register_form">Register Form</string>
</resources>
