<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:text="@string/register_page" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="20dp"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="20dp"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="20dp"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_server_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black_effective"
                android:elevation="2dp"
                android:padding="5dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>