<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgot_password.ForgotPasswordActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="22dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_reset_pw_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/enter_your_email_for_confirmation"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email_forgot_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_reset_pw_title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:textColorHint="@color/gray"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="@dimen/cardview_compat_inset_shadow">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email_forgot_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_reset_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_email_forgot_pw"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/black_effective"
                android:elevation="2dp"
                android:padding="5dp"
                android:text="@string/reset_pw"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/reset_pw_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>