<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login_title"
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/app_login" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_log_email"
                android:layout_below="@id/tv_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_log_password"
                android:layout_below="@+id/til_log_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black_effective">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|start|bottom"
                    android:hint="@string/password"
                    android:maxLength="50"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_server_login"
                android:layout_below="@+id/til_log_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:background="@color/black_effective"
                android:elevation="2dp"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/ll_google_facebook_login"
                android:layout_below="@id/btn_server_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/google_login_button"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/google_sign_in_btn"
                    android:elevation="2dp"
                    android:padding="40dp"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/facebook_login_button"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/fb_sign_in_btn"
                    android:elevation="2dp"
                    android:padding="40dp"
                    android:scaleType="centerCrop" />
            </LinearLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:id="@+id/app_register_layout"
                android:layout_width="match_parent"
                android:layout_below="@id/ll_google_facebook_login"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/text_register" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progress_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/colorAccent"
                android:visibility="gone" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>